# GraphRAG

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml
docker/age-viewer/: Dockerfile  craco.config.js
docker/mcp/: Dockerfile
docker/postgres/: Dockerfile
docker/postgres/init/: 01_extensions.sql  02_schema.sql  03_age_graph.sql  04_enricher_schema.sql
docker/watcher/: Dockerfile
src/graphrag/: __init__.py  config.py
src/graphrag/db/: __init__.py  connection.py  repositories.py
src/graphrag/embeddings/: embedder.py
src/graphrag/enricher/: entity_extractor.py  main.py  similarity_linker.py
src/graphrag/graph/: __init__.py  age_client.py  schema.py
src/graphrag/mcp/: __init__.py  server.py  tools.py
src/graphrag/parser/: __init__.py  markdown_parser.py
src/graphrag/watcher/: __init__.py  file_watcher.py  main.py
tests/: test_embedder.py  test_parser.py
