[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "graphrag"
version = "0.1.0"
description = "Graph-based RAG system with PostgreSQL/AGE and MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
watcher = [
    "watchdog>=4.0",
    "sentence-transformers>=3.0",
    "torch>=2.3",
    "mistune>=3.0",
]
mcp = [
    "mcp[cli]>=1.2",
    "sentence-transformers>=3.0",
    "torch>=2.3",
    "uvicorn[standard]>=0.29",
    "starlette>=0.37",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.9",
    "graphrag[watcher,mcp]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true